--- a/src/App.css
+++ b/src/App.css
@@ -458,6 +458,7 @@ h1 {
 
 }
 .secure{
+  /* secure build */
   background: url("./Image/secure.jfif") no-repeat;
   position: absolute;
   width: 210px;
